--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
     "jsonwebtoken": "^8.2.0",
