--- a/newfront/package.json
+++ b/newfront/package.json
@@ -9,12 +9,15 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-easy-chart": "^1.0.0",
+    "react-google-maps": "^9.4.5",
     "react-modal": "^3.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-strap": "0.0.1",
     "reactstrap": "^4.8.0",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0"
