--- a/newfront/package.json
+++ b/newfront/package.json
@@ -7,16 +7,19 @@
     "bootstrap": "^4.0.0",
     "lodash": "^4.17.5",
     "material-ui": "^0.20.0",
+    "node-mailer": "^0.1.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-easy-chart": "^1.0.0",
     "react-google-maps": "^9.4.5",
+    "react-html-email": "^3.0.0",
     "react-modal": "^3.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-strap": "0.0.1",
+    "react-toggle-button": "^2.2.0",
     "reactstrap": "^4.8.0",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
