--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.5",
     "mongoose": "^5.0.11",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "validator": "^9.4.1"
   },
