--- a/newfront/package.json
+++ b/newfront/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.0.0",
     "lodash": "^4.17.5",
     "material-ui": "^0.20.0",
+    "passport-google-oauth": "^1.0.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
