--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -15,6 +15,7 @@
     "email-existence": "^0.1.6",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
+    "express-session": "^1.15.6",
     "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.11",
