--- a/newfront/package.json
+++ b/newfront/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.5",
     "material-ui": "^0.20.0",
     "node-mailer": "^0.1.1",
